# eurosat-mlops

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
conf/: config.yaml
conf/data/: eurosat.yaml
conf/model/: resnet50.yaml  vit.yaml
conf/training/: default.yaml
conf/wandb/: default.yaml
data/raw/: eurosat.dvc
notebooks/: 01_eda.ipynb
scripts/: eda.py  smoke_test_data.py  smoke_test_model.py
src/eurosat/: __init__.py
src/eurosat/data/: __init__.py  datamodule.py  transforms.py
src/eurosat/evaluation/: __init__.py  evaluate.py  run.py
src/eurosat/models/: __init__.py  factory.py
src/eurosat/training/: __init__.py  engine.py  metrics.py  train.py
src/eurosat/utils/: __init__.py  seed.py
tests/: conftest.py  test_datamodule.py  test_seed.py  test_transforms.py
