[project]
name = "eurosat-mlops"
version = "0.1.0"
description = "Pipeline reprodutível de classificação EuroSAT para aprender MLOps"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "numpy>=1.26",
    "timm>=1.0",
    "hydra-core>=1.3",
    "wandb>=0.16",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eurosat"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# Esta máquina tem ROS instalado no sistema, cujos plugins de pytest falham ao
# carregar. Desativamo-los para que `pytest` corra sem variáveis de ambiente.
addopts = "-p no:ament_copyright -p no:ament_flake8 -p no:ament_lint -p no:ament_pep257 -p no:ament_xmllint -p no:launch_ros -p no:launch_testing"
